src/objects/Join_Process__mdt.object
<CustomObject>
    <description>Types of membership join/renewal processes</description>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_URL__c</fullName>
        <description>URL to redirect to on cancel. If none is specified, cancel will redirect with window.history.back();</description>
        <label>Cancel URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If process is for initial join or renewing of membership</description>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>List of items that can be processed for a particular join process</description>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Join Process</label>
    <listViews>
        <fullName>Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Is_Renewal__c</columns>
        <columns>Item__c</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Cancel_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
    </listViews>
    <pluralLabel>Join Processes</pluralLabel>
</CustomObject>